# getipaddress

./: .gitignore  Jenkinsfile  README.md
src/: CMakeLists.txt  cmp.sh  main.cpp
